--- a/privacy.html
+++ b/privacy.html
@@ -86,65 +86,15 @@
      </nav>
 
     <main class="flex-grow max-w-7xl mx-auto p-4 md:p-8 bg-white shadow-lg my-8 rounded-lg">
-  <h1 class="text-3xl md:text-4xl font-extrabold mb-6 border-b pb-3 text-gray-900">Gizlilik Politikası ve Aydınlatma Metni</h1>
-        <p class="text-sm text-gray-500 mb-8"><strong>Son Güncelleme Tarihi:</strong> [Günün Tarihi]</p>
-
-        <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800">1. Veri Sorumlusu Kimliği (Data Controller)</h2>
-        <p class="mb-4">Kişisel Verilerin Korunması Kanunu (KVKK) ve Genel Veri Koruma Yönetmeliği (GDPR) uyarınca Veri Sorumlusu: Semih Bakar</p>
-        <ul class="list-disc ml-6 mb-6 space-y-1">
-            <li><strong>Unvan:</strong> LibEdge Eğitim ve Danışmanlık (Marka/Girişim)</li>
-            <li><strong>Web Sitesi:</strong> https://libedge.com/</li>
-            <li><strong>İletişim E-posta:</strong> info@libedge.com</li>
-        </ul>
-
-        <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800">2. Toplanan Veriler ve İşleme Amaçları</h2>
-        <p class="mb-4">Verileriniz, temel olarak talep toplama ve site güvenliğini sağlama amaçlarıyla işlenir:</p>
-        <div class="overflow-x-auto">
-            <table class="w-full text-sm border border-gray-300 rounded-lg overflow-hidden">
-                <thead>
-                    <tr class="bg-blue-50 text-gray-800">
-                        <th class="p-3 font-semibold text-left">Veri Kategorisi</th>
-                        <th class="p-3 font-semibold text-left">İşleme Amacı</th>
-                        <th class="p-3 font-semibold text-left">Hukuki Sebep (KVKK/GDPR)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="border-b border-gray-200 hover:bg-gray-50">
-                        <td class="p-3"><strong>Kimlik ve İletişim</strong> (Ad, E-posta, Tel No - Formlardan)</td>
-                        <td class="p-3">Bilgilendirme taleplerinizi yanıtlamak ve sizinle iletişim kurmak.</td>
-                        <td class="p-3">Açık Rıza / Sözleşme Öncesi Görüşmeler</td>
-                    </tr>
-                    <tr class="border-b border-gray-200 hover:bg-gray-50">
-                        <td class="p-3"><strong>İşlem Güvenliği</strong> (IP Adresi, Log Kayıtları)</td>
-                        <td class="p-3">Siber güvenliği sağlamak, yasal yükümlülükleri yerine getirmek.</td>
-                        <td class="p-3">Meşru Menfaat / Yasal Yükümlülük</td>
-                    </tr>
-                    <tr class="hover:bg-gray-50">
-                        <td class="p-3"><strong>Pazarlama/Analiz</strong> (Çerez Verileri)</td>
-                        <td class="p-3">Site performansını ölçmek ve iyileştirmek.</td>
-                        <td class="p-3">Açık Rıza (Çerez Politikasına Bakınız)</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-        <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800">3. Veri Aktarımı</h2>
-        <p class="mb-4">Verileriniz, web sitesinin barındırma ve dağıtım hizmetleri (<strong>GitHub</strong>, <strong>Cloudflare</strong>) yurt dışında bulunduğu için ve analitik hizmetler (kullanılıyorsa) nedeniyle yurt dışına aktarılmaktadır. Bu aktarım, veri güvenliğini sağlamak amacıyla gerekli tedbirler alınarak gerçekleştirilmektedir.</p>
-
-        <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800">4. Veri Sahibi Hakları</h2>
-        <p class="mb-4">KVKK Madde 11 ve GDPR kapsamında, kişisel verilerinizin işlenip işlenmediğini öğrenme, silinmesini veya düzeltilmesini talep etme hakkına sahipsiniz. Başvurularınızı yukarıdaki e-posta adresine yazılı olarak iletebilirsiniz.</p>
-
-        <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800">5. Gelecek Planları</h2>
-        <p>İleride kayıtlı kullanıcı sistemi veya ödeme işlemleri eklendiğinde, bu politika yeni veri kategorileri ve işleme amaçlarını kapsayacak şekilde güncellenecektir.</p>
-                <h1 class="text-3xl md:text-4xl font-extrabold mb-6 border-b pb-3 text-gray-900 translatable">Gizlilik Politikası ve Aydınlatma Metni</h1>
-        <p class="text-sm text-gray-500 mb-8"><strong class="translatable">Son Güncelleme Tarihi:</strong> [Günün Tarihi]</p>
+         <h1 class="text-3xl md:text-4xl font-extrabold mb-6 border-b pb-3 text-gray-900 translatable">Gizlilik Politikası ve Aydınlatma Metni</h1>
+        <p class="text-sm text-gray-500 mb-8"><strong class="translatable">Son Güncelleme Tarihi:</strong> 9.10.2025</p>
 
         <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800 translatable">1. Veri Sorumlusu Kimliği (Data Controller)</h2>
         <p class="mb-4 translatable">Kişisel Verilerin Korunması Kanunu (KVKK) ve Genel Veri Koruma Yönetmeliği (GDPR) uyarınca Veri Sorumlusu:</p>
         <ul class="list-disc ml-6 mb-6 space-y-1">
             <li><strong class="translatable">Unvan:</strong> LibEdge Eğitim ve Danışmanlık (Marka/Girişim)</li>
-            <li><strong class="translatable">Web Sitesi:</strong> https://libedge-website.pages.dev/</li>
-            <li><strong class="translatable">İletişim E-posta:</strong> [LÜTFEN İLETİŞİM E-POSTA ADRESİNİZİ GİRİN]</li>
+            <li><strong class="translatable">Web Sitesi:</strong> https://libedge.com/</li>
+            <li><strong class="translatable">İletişim E-posta:</strong> info@libedge.com</li>
         </ul>
 
         <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800 translatable">2. Toplanan Veriler ve İşleme Amaçları</h2>
