--- a/privacy.html
+++ b/privacy.html
@@ -90,7 +90,7 @@
         <p class="text-sm text-gray-500 mb-8"><strong class="translatable">Son Güncelleme Tarihi:</strong> 9.10.2025</p>
 
         <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800 translatable">1. Veri Sorumlusu Kimliği (Data Controller)</h2>
-        <p class="mb-4 translatable">Kişisel Verilerin Korunması Kanunu (KVKK) ve Genel Veri Koruma Yönetmeliği (GDPR) uyarınca Veri Sorumlusu:</p>
+        <p class="mb-4 translatable">Kişisel Verilerin Korunması Kanunu (KVKK) ve Genel Veri Koruma Yönetmeliği (GDPR) uyarınca Veri Sorumlusu: Semih Bakar</p>
         <ul class="list-disc ml-6 mb-6 space-y-1">
             <li><strong class="translatable">Unvan:</strong> LibEdge Eğitim ve Danışmanlık (Marka/Girişim)</li>
             <li><strong class="translatable">Web Sitesi:</strong> https://libedge.com/</li>
