--- a/privacy.html
+++ b/privacy.html
@@ -147,7 +147,7 @@
             <!-- Şirket Bilgileri -->
             <div class="lg:col-span-1">
                 <div class="flex items-center mb-4">
-                    <img src="assets/images/libedge_logo.webp" alt="LibEdge Logo" class="h-12 w-auto mr-3">
+                    <img src="assets/images/libedge_logo.webp" alt="LibEdge Logo" class="h-12 w-auto mr-3"  href="/">
                     <div>
                         <!-- <h3 class="text-xl font-bold translatable">LibEdge</h3> -->
                         <p class="text-sm text-gray-300 translatable">Eğitim ve Danışmanlık</p>
