--- a/privacy.html
+++ b/privacy.html
@@ -67,7 +67,7 @@
 </header>
     <nav class="bg-white shadow-md sticky top-0 z-10">
         <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-            <a class="text-2xl text-primary nav-logo" href="#">
+            <a class="text-2xl text-primary nav-logo" href="/">
                 <span class="lib-bold translatable">Lib</span><span class="translatable">Edge Eğitim ve Danışmanlık</span>
             </a>
             <button class="hamburger" aria-label="Menüyü aç/kapat" aria-expanded="false">
@@ -147,7 +147,7 @@
             <!-- Şirket Bilgileri -->
             <div class="lg:col-span-1">
                 <div class="flex items-center mb-4">
-                    <img src="assets/images/libedge_logo.webp" alt="LibEdge Logo" class="h-12 w-auto mr-3"  href="/">
+                    <img src="assets/images/libedge_logo.webp" alt="LibEdge Logo" class="h-12 w-auto mr-3">
                     <div>
                         <!-- <h3 class="text-xl font-bold translatable">LibEdge</h3> -->
                         <p class="text-sm text-gray-300 translatable">Eğitim ve Danışmanlık</p>
