--- a/cookies.html
+++ b/cookies.html
@@ -67,7 +67,7 @@
 </header>
     <nav class="bg-white shadow-md sticky top-0 z-10">
         <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-            <a class="text-2xl text-primary nav-logo" href="#">
+            <a class="text-2xl text-primary nav-logo" href="/">
                 <span class="lib-bold translatable">Lib</span><span class="translatable">Edge Eğitim ve Danışmanlık</span>
             </a>
             <button class="hamburger" aria-label="Menüyü aç/kapat" aria-expanded="false">
