--- a/index.html
+++ b/index.html
@@ -83,7 +83,14 @@
     </a>
   
     <div class="dropdown absolute left-0 mt-2 bg-white shadow-lg rounded-lg z-20 p-4 space-y-4 w-[340px] hidden sm:block">
-      <div>
+
+<div>
+  <h4 class="text-sm font-bold text-primary mb-1 translatable">Akademik Dürüstlük</h4>
+  <a href="#pangram" class="block px-2 py-1 text-sm hover:text-primary translatable">Pangram</a>
+  <a href="#imachek" class="block px-2 py-1 text-sm hover:text-primary translatable">ImaChek</a>
+</div>
+
+    <div>
         <h4 class="text-sm font-bold text-primary mb-1 translatable">Yapay Zeka</h4>
         <a href="#pangram" class="block text-gray-700 translatable">Pangram</a>
         <a href="#chatpdf" class="block px-2 py-1 text-sm hover:text-primary translatable">ChatPDF</a>
@@ -136,6 +143,16 @@
     </div>
   
     <div id="mobile-products" class="space-y-2 mt-2 px-2 sm:hidden">
+
+<div class="group">
+  <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
+    <span class="translatable">Akademik Dürüstlük</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+  </button>
+  <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
+    <a href="#pangram" class="block text-gray-700 translatable">Pangram</a>
+    <a href="#imachek" class="block text-gray-700 translatable">ImaChek</a>
+  </div>
+</div>
 
   <div class="group">
     <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
@@ -325,11 +342,12 @@
   <button class="subject-btn translatable" data-subject="sosyal-bilimler" aria-pressed="false">Sosyal Bilimler</button>
   <button class="subject-btn translatable" data-subject="is-hukuk" aria-pressed="false">İş &amp; Hukuk</button>
   <button class="subject-btn translatable" data-subject="sanat" aria-pressed="false">Sanat</button>
+  <button class="subject-btn translatable" data-subject="akademik-durustluk" aria-pressed="false">Akademik Dürüstlük</button>
   <button class="subject-btn translatable" data-subject="yapay-zeka" aria-pressed="false">Yapay Zeka</button>
 </div>
         </div>
         <div class="tools-grid" id="products-grid">
-<div class="product-card-container" data-subjects="yapay-zeka" id="pangram">
+<div class="product-card-container" data-subjects="yapay-zeka,akademik-durustluk" id="pangram">
   <div class="flip-card h-full">
     <div class="flip-inner h-full">
       <div class="flip-front border-blue-400">
@@ -529,7 +547,7 @@
                 </div>
             </div>
 
-<div class="product-card-container" data-subjects="saglik" id="imachek">
+<div class="product-card-container" data-subjects="saglik,akademik-durustluk" id="imachek">
     <div class="flip-card h-full">
         <div class="flip-inner h-full">
             <div class="flip-front border-red-400">
