--- a/index.html
+++ b/index.html
@@ -1224,6 +1224,7 @@
                     <a class="text-gray-300 hover:text-white transition-colors duration-200 translatable" href="#products" data-filter="fen-matematik">Fen & Matematik</a>
                     <a class="text-gray-300 hover:text-white transition-colors duration-200 translatable" href="#products" data-filter="sosyal-bilimler">Sosyal Bilimler</a>
                     <a class="text-gray-300 hover:text-white transition-colors duration-200 translatable" href="#products" data-filter="sanat">Sanat</a>
+                    <a class="text-gray-300 hover:text-white transition-colors duration-200 translatable" href="#products" data-filter="akademik-durustluk">Akademik Dürüstlük</a>
                 </div>
             </div>
 
