--- a/Announcements.html
+++ b/Announcements.html
@@ -330,7 +330,7 @@
 
     <script>
         // Worker URL - kendi worker URL'nizi buraya ekleyin
-        const WORKER_URL = ''https://view-counter.agursel.workers.dev/';
+        const WORKER_URL = 'https://view-counter.agursel.workers.dev/';
 
         // Görüntüleme sayacı fonksiyonu
         async function updateViewCount(pageId) {
