--- a/Announcements.html
+++ b/Announcements.html
@@ -235,7 +235,7 @@
                 En güncel ürün haberleri, etkinlikler, kampanyalar ve sektör duyurularından haberdar olun.
             </p>
         </div>
-
+<!-- Ürün Kategorileri 
         <div class="bg-white/90 backdrop-blur-sm rounded-2xl shadow-lg p-6 mb-8 border border-white/20">
             <div class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-6">
                 <div class="flex flex-wrap gap-4 text-sm font-medium w-full lg:w-auto">
@@ -243,7 +243,7 @@
                     <span class="stats-card rounded-full px-4 py-2 text-red-600">Acil: <span id="urgentCount" class="font-bold">0</span></span>
                     <span class="stats-card rounded-full px-4 py-2 text-blue-600">Ürün: <span id="productCount" class="font-bold">0</span></span>
                     <span class="stats-card rounded-full px-4 py-2 text-green-600">Etkinlik: <span id="eventCount" class="font-bold">0</span></span>
-                </div>
+                </div> -->
                 
                 <div class="flex gap-3 w-full lg:w-auto">
                     <div class="search-container relative flex-grow lg:flex-grow-0">
