--- a/Announcements.html
+++ b/Announcements.html
@@ -235,9 +235,11 @@
                 En güncel ürün haberleri, etkinlikler, kampanyalar ve sektör duyurularından haberdar olun.
             </p>
         </div>
-<!-- Ürün Kategorileri 
+
         <div class="bg-white/90 backdrop-blur-sm rounded-2xl shadow-lg p-6 mb-8 border border-white/20">
+
             <div class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-6">
+                <!-- istatistik kartları geçici olarak kaldırıldı
                 <div class="flex flex-wrap gap-4 text-sm font-medium w-full lg:w-auto">
                     <span class="stats-card rounded-full px-4 py-2 text-primary">Toplam: <span id="totalCount" class="font-bold">0</span></span>
                     <span class="stats-card rounded-full px-4 py-2 text-red-600">Acil: <span id="urgentCount" class="font-bold">0</span></span>
