--- a/Announcements.html
+++ b/Announcements.html
@@ -837,7 +837,7 @@
                 </button>
             `;
 
-            const maxVisiblePages = 5 Otočit stranica
+            const maxVisiblePages = 5;
 
             let startPage = Math.max(1, this.currentPage - Math.floor(maxVisiblePages / 2));
             let endPage = Math.min(totalPages, startPage + maxVisiblePages - 1);
